--- a/assets/styles.css
+++ b/assets/styles.css
@@ -87,7 +87,7 @@ body{
 }
 
 .login-button-link {
-  background-color: #575ead; 
+  background-color: rgb(12, 2, 68); 
   color: white;
   text-decoration: none;
   border: none;
